Calendar overflow fixed

--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -8,7 +8,7 @@
 
 .simple-calendar {
   width: 85vw;
-  height: 383px;
+  height: auto;
   border: 1px solid $black;
 
   .day {
@@ -28,12 +28,11 @@
   }
 
   .table {
+    margin-bottom: 0;
+
     th, td {
       text-align: center;
     }
 
-    td {
-      overflow: hidden;
-    }
   }
 }
